<resources>
    <string name="app_name">MondeoFlowers</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="basket">Basket</string>
    <string name="catalog">Catalog</string>
    <string name="over_ons">Over ons</string>
    <string name="home">Home</string>
    <string name="facebook_app_id">[APP_ID]</string>
    <string name="fb_login_protocol_scheme">fb[APP_ID]</string>
    <string name="title_activity_maps">Map</string>
    <string name="voornaam_achternaam">Voornaam + Achternaam</string>
    <string name="gsm_number">Gsm nummer</string>
    <string name="e_mail_adres">e-mail adres</string>
    <string name="postcode">postcode</string>
    <string name="register">Register</string>
    <string name="straat_nr">Straat + Nr°</string>
</resources>
